--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/infoDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/infoDialog.cshtml
@@ -4,12 +4,12 @@
         <md-icon md-svg-icon="t:close"></md-icon>
     </md-button>
     <md-toolbar layout="row" layout-align="space-between center">
-        <div class="bg-l"></div>
+        <div class="bg-l" hide-xs></div>
         <div class="text">
             <h2>@GamificationResources.InfoTitle</h2>
             <p>@GamificationResources.InfoText</p>
         </div>
-        <div class="bg-r"></div>
+        <div class="bg-r" hide-xs></div>
     </md-toolbar>
     <md-dialog-content>
 
