--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_LayoutPage.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_LayoutPage.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.Optimization
-@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
+﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 @using Zbang.Zbox.Infrastructure.Extensions
 
 @{
@@ -24,8 +23,8 @@
             display: none !important;
         }
     </style>
-    @Styles.Render("~/angularMaterial")
-    @Html.Css3("~/site4")
+    <link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.1/angular-material.min.css">
+    @Html.Css2("site4")
     @{Html.RenderPartial("_Head");}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
@@ -96,7 +95,7 @@
     @*DO NOT REMOVE THIS AT ALL TIME*@
     <div id="cssCheck"></div>
 
-    @Html.Script2("site4")
+    @Html.Script2("jsSite4")
 
     <script>
     @if (User != null)
