--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_LayoutStatic.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_LayoutStatic.cshtml
@@ -12,7 +12,7 @@
 
 <html lang="@System.Threading.Thread.CurrentThread.CurrentUICulture.TwoLetterISOLanguageName">
     <head>
-        @Html.Css3("~/staticPage")
+        @Html.Css2("staticPage")
         @{ Html.RenderPartial("_Head");}
         <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     </head>
