--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/inline-material.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/inline-material.css
@@ -1,4 +1,4 @@
-﻿md-bottom-sheet.md-default-theme.md-list md-list-item, md-bottom-sheet.md-list md-list-item {
+﻿/*md-bottom-sheet.md-default-theme.md-list md-list-item, md-bottom-sheet.md-list md-list-item {
     color: rgba(0,0,0,0.87);
 }
 
@@ -102,7 +102,6 @@ md-chips.md-default-theme .md-chip.md-focused, md-chips .md-chip.md-focused {
     md-chips.md-default-theme .md-chip.md-focused md-icon, md-chips .md-chip.md-focused md-icon {
         color: rgba(255,255,255,0.87);
     }
-/** Theme styles for mdCalendar. */
 
 .md-calendar.md-default-theme, .md-calendar {
     color: rgba(0,0,0,0.87);
@@ -169,8 +168,6 @@ md-icon.md-default-theme, md-icon {
 md-input-container.md-default-theme .md-input, md-input-container .md-input {
     color: rgba(0,0,0,0.87);
     border-color: rgba(0,0,0,0.12);
-    /*text-shadow:;*/
-}
 
     md-input-container.md-default-theme .md-input::-webkit-input-placeholder, md-input-container .md-input::-webkit-input-placeholder, md-input-container.md-default-theme .md-input::-moz-placeholder, md-input-container .md-input::-moz-placeholder, md-input-container.md-default-theme .md-input:-moz-placeholder, md-input-container .md-input:-moz-placeholder, md-input-container.md-default-theme .md-input:-ms-input-placeholder, md-input-container .md-input:-ms-input-placeholder {
         color: rgba(0,0,0,0.26);
@@ -181,7 +178,6 @@ md-input-container.md-default-theme > md-icon, md-input-container > md-icon {
 }
 
 md-input-container.md-default-theme label, md-input-container label, md-input-container.md-default-theme .md-placeholder, md-input-container .md-placeholder {
-    /*text-shadow:;*/
     color: rgba(0,0,0,0.26);
 }
 
@@ -239,15 +235,12 @@ md-progress-circular.md-default-theme .md-inner .md-gap, md-progress-circular .m
     border-top-color: rgb(63,81,181);
     border-bottom-color: rgb(63,81,181);
 }
-/*rtl:ignore*/
 md-progress-circular.md-default-theme .md-inner .md-left .md-half-circle, md-progress-circular .md-inner .md-left .md-half-circle, md-progress-circular.md-default-theme .md-inner .md-right .md-half-circle, md-progress-circular .md-inner .md-right .md-half-circle {
     border-top-color: rgb(63,81,181);
 }
-/*rtl:ignore*/
 md-progress-circular.md-default-theme .md-inner .md-right .md-half-circle, md-progress-circular .md-inner .md-right .md-half-circle {
     border-right-color: rgb(63,81,181);
 }
-/*rtl:ignore*/
 md-progress-circular.md-default-theme .md-inner .md-left .md-half-circle, md-progress-circular .md-inner .md-left .md-half-circle {
     border-left-color: rgb(63,81,181);
 }
@@ -296,9 +289,7 @@ md-radio-group.md-default-theme.md-primary .md-checked:not([disabled]) .md-ink-r
     color: rgba(63,81,181,0.26);
 }
 
-/*md-radio-group.md-default-theme .md-checked.md-primary .md-ink-ripple, md-radio-group .md-checked.md-primary .md-ink-ripple {
-    color: '-0.26';
-}*/
+
 
 md-radio-group.md-default-theme.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-default-theme.md-focused:not(:empty) .md-checked.md-primary .md-container:before, md-radio-group.md-focused:not(:empty) .md-checked.md-primary .md-container:before {
     background-color: rgba(63,81,181,0.26);
@@ -572,7 +563,6 @@ md-chips.md-default-theme.md-hue-1 .md-chip.md-focused, md-chips.md-hue-1 .md-ch
     md-chips.md-default-theme.md-hue-1 .md-chip.md-focused md-icon, md-chips.md-hue-1 .md-chip.md-focused md-icon {
         color: rgb(255,255,255);
     }
-/** Theme styles for mdCalendar. */
 
 .md-calendar.md-default-theme.md-hue-1, .md-calendar.md-hue-1 {
     color: rgba(0,0,0,0.87);
@@ -639,7 +629,6 @@ md-icon.md-default-theme.md-hue-1, md-icon.md-hue-1 {
 md-input-container.md-default-theme.md-hue-1 .md-input, md-input-container.md-hue-1 .md-input {
     color: rgba(0,0,0,0.87);
     border-color: rgba(0,0,0,0.12);
-    /*text-shadow:;*/
 }
 
     md-input-container.md-default-theme.md-hue-1 .md-input::-webkit-input-placeholder, md-input-container.md-hue-1 .md-input::-webkit-input-placeholder, md-input-container.md-default-theme.md-hue-1 .md-input::-moz-placeholder, md-input-container.md-hue-1 .md-input::-moz-placeholder, md-input-container.md-default-theme.md-hue-1 .md-input:-moz-placeholder, md-input-container.md-hue-1 .md-input:-moz-placeholder, md-input-container.md-default-theme.md-hue-1 .md-input:-ms-input-placeholder, md-input-container.md-hue-1 .md-input:-ms-input-placeholder {
@@ -651,7 +640,6 @@ md-input-container.md-default-theme.md-hue-1 > md-icon, md-input-container.md-hu
 }
 
 md-input-container.md-default-theme.md-hue-1 label, md-input-container.md-hue-1 label, md-input-container.md-default-theme.md-hue-1 .md-placeholder, md-input-container.md-hue-1 .md-placeholder {
-    /*text-shadow:;*/
     color: rgba(0,0,0,0.26);
 }
 
@@ -766,9 +754,6 @@ md-radio-group.md-default-theme.md-hue-1.md-primary .md-checked:not([disabled]) 
     color: rgba(121,134,203,0.26);
 }
 
-/*md-radio-group.md-default-theme.md-hue-1 .md-checked.md-primary .md-ink-ripple, md-radio-group.md-hue-1 .md-checked.md-primary .md-ink-ripple {
-    color: '-0.26';
-}*/
 
 md-radio-group.md-default-theme.md-hue-1.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-hue-1.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-default-theme.md-hue-1.md-focused:not(:empty) .md-checked.md-primary .md-container:before, md-radio-group.md-hue-1.md-focused:not(:empty) .md-checked.md-primary .md-container:before {
     background-color: rgba(121,134,203,0.26);
@@ -1041,8 +1026,7 @@ md-chips.md-default-theme.md-hue-2 .md-chip.md-focused, md-chips.md-hue-2 .md-ch
 
     md-chips.md-default-theme.md-hue-2 .md-chip.md-focused md-icon, md-chips.md-hue-2 .md-chip.md-focused md-icon {
         color: rgba(255,255,255,0.87);
-    }
-/** Theme styles for mdCalendar. */
+}
 
 .md-calendar.md-default-theme.md-hue-2, .md-calendar.md-hue-2 {
     color: rgba(0,0,0,0.87);
@@ -1109,7 +1093,6 @@ md-icon.md-default-theme.md-hue-2, md-icon.md-hue-2 {
 md-input-container.md-default-theme.md-hue-2 .md-input, md-input-container.md-hue-2 .md-input {
     color: rgba(0,0,0,0.87);
     border-color: rgba(0,0,0,0.12);
-    /*text-shadow:;*/
 }
 
     md-input-container.md-default-theme.md-hue-2 .md-input::-webkit-input-placeholder, md-input-container.md-hue-2 .md-input::-webkit-input-placeholder, md-input-container.md-default-theme.md-hue-2 .md-input::-moz-placeholder, md-input-container.md-hue-2 .md-input::-moz-placeholder, md-input-container.md-default-theme.md-hue-2 .md-input:-moz-placeholder, md-input-container.md-hue-2 .md-input:-moz-placeholder, md-input-container.md-default-theme.md-hue-2 .md-input:-ms-input-placeholder, md-input-container.md-hue-2 .md-input:-ms-input-placeholder {
@@ -1121,7 +1104,6 @@ md-input-container.md-default-theme.md-hue-2 > md-icon, md-input-container.md-hu
 }
 
 md-input-container.md-default-theme.md-hue-2 label, md-input-container.md-hue-2 label, md-input-container.md-default-theme.md-hue-2 .md-placeholder, md-input-container.md-hue-2 .md-placeholder {
-    /*text-shadow:;*/
     color: rgba(0,0,0,0.26);
 }
 
@@ -1235,10 +1217,6 @@ md-radio-group.md-default-theme.md-hue-2[disabled], md-radio-group.md-hue-2[disa
 md-radio-group.md-default-theme.md-hue-2.md-primary .md-checked:not([disabled]) .md-ink-ripple, md-radio-group.md-hue-2.md-primary .md-checked:not([disabled]) .md-ink-ripple, md-radio-group.md-default-theme.md-hue-2 .md-checked:not([disabled]).md-primary .md-ink-ripple, md-radio-group.md-hue-2 .md-checked:not([disabled]).md-primary .md-ink-ripple {
     color: rgba(40,53,147,0.26);
 }
-
-/*md-radio-group.md-default-theme.md-hue-2 .md-checked.md-primary .md-ink-ripple, md-radio-group.md-hue-2 .md-checked.md-primary .md-ink-ripple {
-    color: '-0.26';
-}*/
 
 md-radio-group.md-default-theme.md-hue-2.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-hue-2.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-default-theme.md-hue-2.md-focused:not(:empty) .md-checked.md-primary .md-container:before, md-radio-group.md-hue-2.md-focused:not(:empty) .md-checked.md-primary .md-container:before {
     background-color: rgba(40,53,147,0.26);
@@ -1512,7 +1490,6 @@ md-chips.md-default-theme.md-hue-3 .md-chip.md-focused, md-chips.md-hue-3 .md-ch
     md-chips.md-default-theme.md-hue-3 .md-chip.md-focused md-icon, md-chips.md-hue-3 .md-chip.md-focused md-icon {
         color: rgba(0,0,0,0.87);
     }
-/** Theme styles for mdCalendar. */
 
 .md-calendar.md-default-theme.md-hue-3, .md-calendar.md-hue-3 {
     color: rgba(0,0,0,0.87);
@@ -1579,7 +1556,6 @@ md-icon.md-default-theme.md-hue-3, md-icon.md-hue-3 {
 md-input-container.md-default-theme.md-hue-3 .md-input, md-input-container.md-hue-3 .md-input {
     color: rgba(0,0,0,0.87);
     border-color: rgba(0,0,0,0.12);
-    /*text-shadow:;*/
 }
 
     md-input-container.md-default-theme.md-hue-3 .md-input::-webkit-input-placeholder, md-input-container.md-hue-3 .md-input::-webkit-input-placeholder, md-input-container.md-default-theme.md-hue-3 .md-input::-moz-placeholder, md-input-container.md-hue-3 .md-input::-moz-placeholder, md-input-container.md-default-theme.md-hue-3 .md-input:-moz-placeholder, md-input-container.md-hue-3 .md-input:-moz-placeholder, md-input-container.md-default-theme.md-hue-3 .md-input:-ms-input-placeholder, md-input-container.md-hue-3 .md-input:-ms-input-placeholder {
@@ -1591,7 +1567,6 @@ md-input-container.md-default-theme.md-hue-3 > md-icon, md-input-container.md-hu
 }
 
 md-input-container.md-default-theme.md-hue-3 label, md-input-container.md-hue-3 label, md-input-container.md-default-theme.md-hue-3 .md-placeholder, md-input-container.md-hue-3 .md-placeholder {
-    /*text-shadow:;*/
     color: rgba(0,0,0,0.26);
 }
 
@@ -1706,9 +1681,6 @@ md-radio-group.md-default-theme.md-hue-3.md-primary .md-checked:not([disabled]) 
     color: rgba(140,158,255,0.26);
 }
 
-/*md-radio-group.md-default-theme.md-hue-3 .md-checked.md-primary .md-ink-ripple, md-radio-group.md-hue-3 .md-checked.md-primary .md-ink-ripple {
-    color: '-0.26';
-}*/
 
 md-radio-group.md-default-theme.md-hue-3.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-hue-3.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-default-theme.md-hue-3.md-focused:not(:empty) .md-checked.md-primary .md-container:before, md-radio-group.md-hue-3.md-focused:not(:empty) .md-checked.md-primary .md-container:before {
     background-color: rgba(140,158,255,0.26);
@@ -3965,10 +3937,6 @@ md-bottom-sheet.md-default-theme, md-bottom-sheet {
         background-color: rgb(250,250,250);
     }
 
-a.md-button.md-default-theme:not([disabled]):hover, a.md-button:not([disabled]):hover, .md-button.md-default-theme:not([disabled]):hover, .md-button:not([disabled]):hover {
-    background-color: rgba(158,158,158,0.2);
-}
-
 a.md-button.md-default-theme:not([disabled]).md-focused, a.md-button:not([disabled]).md-focused, .md-button.md-default-theme:not([disabled]).md-focused, .md-button:not([disabled]).md-focused {
     background-color: rgba(158,158,158,0.2);
 }
@@ -4062,7 +4030,6 @@ md-content.md-default-theme, md-content {
 .md-default-theme .md-calendar-date-selection-indicator:hover, .md-calendar-date-selection-indicator:hover {
     background: rgb(224,224,224);
 }
-/** Theme styles for mdDatepicker. */
 
 md-datepicker.md-default-theme, md-datepicker {
     background: rgb(255,255,255);
@@ -4085,10 +4052,6 @@ md-datepicker.md-default-theme, md-datepicker {
     background: rgb(255,255,255);
 }
 
-md-dialog.md-default-theme, md-dialog {
-    border-radius: 4px;
-    background-color: rgb(255,255,255);
-}
 
 md-input-container.md-default-theme .md-input[disabled], md-input-container .md-input[disabled], md-input-container.md-default-theme .md-input [disabled], md-input-container .md-input [disabled] {
     border-bottom-color: transparent;
@@ -4106,9 +4069,6 @@ md-list.md-default-theme md-list-item > .md-avatar-icon, md-list md-list-item > 
     color: rgb(255,255,255);
 }
 
-md-menu-content.md-default-theme, md-menu-content {
-    background-color: rgb(255,255,255);
-}
 
     md-menu-content.md-default-theme md-menu-divider, md-menu-content md-menu-divider {
         background-color: rgba(0,0,0,0.12);
@@ -4371,7 +4331,7 @@ md-content.md-default-theme.md-hue-1, md-content.md-hue-1 {
 .md-default-theme.md-hue-1 .md-calendar-date-selection-indicator:hover, .md-hue-1 .md-calendar-date-selection-indicator:hover {
     background: rgb(224,224,224);
 }
-/** Theme styles for mdDatepicker. */
+
 
 md-datepicker.md-default-theme.md-hue-1, md-datepicker.md-hue-1 {
     background: rgb(224,224,224);
@@ -4680,7 +4640,6 @@ md-content.md-default-theme.md-hue-2, md-content.md-hue-2 {
 .md-default-theme.md-hue-2 .md-calendar-date-selection-indicator:hover, .md-hue-2 .md-calendar-date-selection-indicator:hover {
     background: rgb(224,224,224);
 }
-/** Theme styles for mdDatepicker. */
 
 md-datepicker.md-default-theme.md-hue-2, md-datepicker.md-hue-2 {
     background: rgb(66,66,66);
@@ -4989,7 +4948,6 @@ md-content.md-default-theme.md-hue-3, md-content.md-hue-3 {
 .md-default-theme.md-hue-3 .md-calendar-date-selection-indicator:hover, .md-hue-3 .md-calendar-date-selection-indicator:hover {
     background: rgb(224,224,224);
 }
-/** Theme styles for mdDatepicker. */
 
 md-datepicker.md-default-theme.md-hue-3, md-datepicker.md-hue-3 {
     background: rgb(33,33,33);
@@ -5194,4 +5152,24 @@ ng\:form {
 
 .ng-anchor {
     position: absolute;
+}
+*/
+
+/************************/
+
+md-menu-content.md-default-theme, md-menu-content {
+    background-color: rgb(255,255,255);
+} 
+
+a.md-button.md-default-theme:not([disabled]):hover, a.md-button:not([disabled]):hover, .md-button.md-default-theme:not([disabled]):hover, .md-button:not([disabled]):hover {
+    background-color: rgba(158,158,158,0.2);
+}
+
+md-dialog.md-default-theme, md-dialog {
+    border-radius: 4px;
+    background-color: rgb(255,255,255);
+}
+
+md-toolbar.md-default-theme:not(.md-menu-toolbar), md-toolbar:not(.md-menu-toolbar) {
+    color: rgba(255,255,255,0.87);
 }
