--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
@@ -3,7 +3,7 @@
 .dashboard {
     .leaderboardbox {
         height: @dashboardCubeHeight;
-        padding: 10px;
+        padding: 0;
     }
 
     .dashboard-actions .actions-container {
