--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
@@ -83,7 +83,7 @@
                                     </div>
                                     <div class="body">
                                         @GamificationResources.LevelFreshmanBody
-                                        <md-progress-linear ng-cloak md-mode="determinate" value="80"></md-progress-linear>
+                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
                                         <div class="counter">200,000 Students</div>
                                     </div>
                                 </li>
@@ -94,7 +94,7 @@
                                     </div>
                                     <div class="body">
                                         @GamificationResources.LevelSophomoreBody
-                                        <md-progress-linear ng-cloak md-mode="determinate" value="80"></md-progress-linear>
+                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
                                         <div class="counter">200,000 Students</div>
                                     </div>
                                 </li>
@@ -105,7 +105,7 @@
                                     </div>
                                     <div class="body">
                                         @GamificationResources.LevelUpperclassmanBody
-                                        <md-progress-linear ng-cloak md-mode="determinate" value="80"></md-progress-linear>
+                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
                                         <div class="counter">200,000 Students</div>
                                     </div>
                                 </li>
@@ -116,7 +116,7 @@
                                     </div>
                                     <div class="body">
                                         @GamificationResources.LevelStraightAStudentBody
-                                        <md-progress-linear ng-cloak md-mode="determinate" value="80"></md-progress-linear>
+                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
                                         <div class="counter">200,000 Students</div>
                                     </div>
                                 </li>
@@ -127,7 +127,7 @@
                                     </div>
                                     <div class="body">
                                         @GamificationResources.LevelScholarBody
-                                        <md-progress-linear ng-cloak md-mode="determinate" value="80"></md-progress-linear>
+                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
                                         <div class="counter">200,000 Students</div>
                                     </div>
                                 </li>
@@ -138,7 +138,7 @@
                                     </div>
                                     <div class="body">
                                         @GamificationResources.LevelProfessorBody
-                                        <md-progress-linear ng-cloak md-mode="determinate" value="80"></md-progress-linear>
+                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
                                         <div class="counter">200,000 Students</div>
                                     </div>
                                 </li>
@@ -149,7 +149,7 @@
                                     </div>
                                     <div class="body">
                                         @GamificationResources.LevelPhDBody
-                                        <md-progress-linear ng-cloak md-mode="determinate" value="80"></md-progress-linear>
+                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
                                         <div class="counter">200,000 Students</div>
                                     </div>
                                 </li>
@@ -160,7 +160,7 @@
                                     </div>
                                     <div class="body">
                                         @GamificationResources.LevelEinsteinBody
-                                        <md-progress-linear ng-cloak md-mode="determinate" value="80"></md-progress-linear>
+                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
                                         <div class="counter">200,000 Students</div>
                                     </div>
                                 </li>
@@ -174,7 +174,7 @@
                                         <div class="image"></div>
                                         <div class="text">{{::badge.name}}</div>
                                         <div class="progress">
-                                            <md-progress-linear ng-cloak md-mode="determinate" value="{{::badge.progress}}"></md-progress-linear>
+                                            <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="{{::badge.progress}}"></md-progress-linear>
                                         </div>
                                     </div>
                                 </div>
@@ -188,7 +188,7 @@
                                     <div class="image"></div>
                                     <div class="text">{{u.badgeInfo.data.name}}</div>
                                     <div class="progress">
-                                        <md-progress-linear ng-cloak md-mode="determinate" value="{{u.badgeInfo.data.progress}}"></md-progress-linear>
+                                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="{{u.badgeInfo.data.progress}}"></md-progress-linear>
                                     </div>
                                     <div class="details">
                                         <div class="condition">{{u.badgeInfo.data.condition}}</div>
