--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/infoDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/infoDialog.cshtml
@@ -17,7 +17,7 @@
             <div class="text">Next Level in 500 Points</div>
             <button type="button">See all levels</button>
         </div>
-        <md-progress-linear ng-cloak md-mode="determinate" value="80"></md-progress-linear>
+        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="80"></md-progress-linear>
         <ul class="points-data" layout="row" layout-padding layout-wrap>
             <li class="point-data create-quiz" flex-xs="50" flex="25">
                 <div class="icon-wrapper">
