--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.css
@@ -1,61 +1,175 @@
-﻿.leaderboard {
-  width: 100%;
+﻿/*.leaderboard {
+    width: 100%;
+
+    h4 {
+        font-size: 21px;
+        font-weight: 700;
+        margin-top: 0;
+        text-align: center;
+        margin-bottom: 10px;
+        color: @textColorGrey;
+
+        @media (min-width:960px) {
+            font-size: 1.2vw;
+        }
+
+        @media (min-width:1200px) {
+            font-size: 1.2vw;
+        }
+    }
+
+    .userLetter {
+        font-size: 17px;
+    }
+
+    .user-name {
+        -ms-text-overflow: ellipsis;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+        width: ~"calc(100% - 50px)";
+        display: inline-block;
+        overflow: hidden;
+        white-space: nowrap;
+        vertical-align: middle;
+        color: @textColorBlack;
+    }
+
+    .img-circle {
+        margin-right: 10px;
+    }
+
+    .r-table {
+        text-align: center;
+        font-size: 12px;
+        width: 100%;
+    }
+
+    .r-table-row {
+        height: 40px;
+        line-height: 40px;
+    }
+
+    .r-table-cell {
+        width: ~"calc(100% - 75px)";
+        text-align: left;
+        color: @textColorOrange;
+
+        &:nth-child(even) {
+            width: 15px;
+            text-align: center;
+        }
+
+        &.last {
+            text-align: right;
+            white-space: nowrap;
+            color: @textColorBlack;
+        }
+    }
+}*/
+.leaderboardbox {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: stretch;
+  align-items: stretch;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  flex-direction: column;
+  position: relative;
 }
-.leaderboard h4 {
-  font-size: 21px;
-  font-weight: 700;
-  margin-top: 0;
-  text-align: center;
-  margin-bottom: 10px;
-  color: #888b8e;
-}
-@media (min-width: 960px) {
-  .leaderboard h4 {
-    font-size: 1.2vw;
-  }
-}
-@media (min-width: 1200px) {
-  .leaderboard h4 {
-    font-size: 1.2vw;
-  }
-}
-.leaderboard .userLetter {
-  font-size: 17px;
-}
-.leaderboard .user-name {
-  -ms-text-overflow: ellipsis;
-  -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  width: calc(100% - 50px);
-  display: inline-block;
+.leaderboardbox .bg-l,
+.leaderboardbox .bg-r {
+  height: 90px;
+  top: 0;
+  z-index: 0;
+  position: absolute;
   overflow: hidden;
-  white-space: nowrap;
-  vertical-align: middle;
-  color: #212325;
+  width: 100px;
 }
-.leaderboard .img-circle {
-  margin-right: 10px;
+.leaderboardbox .bg-l {
+  left: 0;
 }
-.leaderboard .r-table {
+.leaderboardbox .bg-r {
+  right: 0;
+}
+.leaderboardbox .top {
+  padding: 0 10px;
+}
+.leaderboardbox .top .points {
   text-align: center;
+}
+.leaderboardbox .top .points-wrapper {
+  display: inline-block;
+  font-size: 38px;
+  position: relative;
+  padding: 5px 18px 14px 18px;
+  color: #ffce2f;
+  background: #323538;
+  border-radius: 0 0 5px 5px;
+  font-weight: bold;
+}
+.leaderboardbox .top .points-wrapper span:not(.number) {
+  position: absolute;
   font-size: 12px;
-  width: 100%;
+  bottom: 5px;
+  right: 20px;
 }
-.leaderboard .r-table-row {
-  height: 40px;
-  line-height: 40px;
-}
-.leaderboard .r-table-cell {
-  width: calc(100% - 75px);
-  text-align: left;
-  color: #ffa500;
-}
-.leaderboard .r-table-cell:nth-child(even) {
-  width: 15px;
+.leaderboardbox .top .text {
   text-align: center;
+  font-size: 14px;
+  margin: 14px 0;
 }
-.leaderboard .r-table-cell.last {
-  text-align: right;
-  white-space: nowrap;
-  color: #212325;
+.leaderboardbox .top .custom-progress-bar {
+  height: 10px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.leaderboardbox .top .custom-progress-bar.md-default-theme .md-container,
+.leaderboardbox .top .custom-progress-bar .md-container {
+  border-radius: 5px;
+}
+.leaderboardbox .top .custom-progress-bar.md-default-theme .md-container,
+.leaderboardbox .top .custom-progress-bar .md-bar,
+.leaderboardbox .top .custom-progress-bar .md-container {
+  height: 10px;
+}
+.leaderboardbox .top .custom-progress-bar .md-container {
+  background: #eeeeee;
+  height: 10px;
+}
+.leaderboardbox .top .custom-progress-bar .md-container .md-bar {
+  background: #ffce2f;
+}
+.leaderboardbox .top .custom-progress-bar .md-container .md-bar {
+  border-radius: 5px;
+}
+.leaderboardbox .top .custom-progress-bar .md-container {
+  box-shadow: inset 0 0 7px 0 rgba(0, 0, 0, 0.35);
+}
+.leaderboardbox .bottom {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  padding: 10px;
+  background: #eeeeee;
+}
+.leaderboardbox .bottom .level,
+.leaderboardbox .bottom .badges {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+}
+.leaderboardbox .bottom .icon {
+  width: 30px;
+  height: 30px;
+  background: rgba(255, 206, 47, 0.5);
+  margin-right: 5px;
 }
