--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -1,6 +1,6 @@
 ﻿@import "variables.less";
 
-.leaderboard {
+/*.leaderboard {
     width: 100%;
 
     h4 {
@@ -65,6 +65,98 @@
             text-align: right;
             white-space: nowrap;
             color: @textColorBlack;
+        }
+    }
+}*/
+
+
+.leaderboardbox {
+    .displayFlex;
+    .align-items(stretch);
+    .justifyContet(space-between);
+    flex-direction: column;
+    position: relative;
+
+    .bg-l, .bg-r {
+        height: 90px;
+        top: 0;
+        z-index: 0;
+        position: absolute;
+        overflow: hidden;
+        width: 100px;
+    }
+
+    .bg-l {
+        left: 0;
+    }
+
+    .bg-r {
+        ;
+        right: 0;
+    }
+
+    .top {
+        padding: 0 10px;
+
+        .points {
+            text-align: center;
+        }
+
+        .points-wrapper {
+            display: inline-block;
+            font-size: 38px;
+            position: relative;
+            padding: 5px 18px 14px 18px;
+            color: @gamificationYellow;
+            background: @headerbackground;
+            border-radius: 0 0 5px 5px;
+            font-weight: bold;
+
+            span:not(.number) {
+                position: absolute;
+                font-size: 12px;
+                bottom: 5px;
+                right: 20px;
+            }
+        }
+
+        .text {
+            text-align: center;
+            font-size: 14px;
+            margin: 14px 0;
+        }
+
+        .custom-progress-bar {
+            .custom-progress-bar(@gamificationYellow, @backgroundCalmGrey, 10px, 5px);
+
+            .md-container .md-bar {
+                border-radius: 5px;
+            }
+
+            .md-container {
+                box-shadow: inset 0 0 7px 0 rgba(0, 0, 0, 0.35);
+            }
+        }
+    }
+
+    .bottom {
+        .displayFlex;
+        .align-items(center);
+        .justifyContet(space-between);
+        padding: 10px;
+        background: @backgroundCalmGrey;
+
+        .level, .badges {
+            .displayFlex;
+            .align-items(center);
+            .justifyContet(flex-start);
+        }
+
+        .icon {
+            width: 30px;
+            height: 30px;
+            background: rgba(255, 206, 47, 0.5);
+            margin-right: 5px;
         }
     }
 }
