--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
@@ -210,7 +210,7 @@
                             <div class="form-actions" layout="row" layout-align="center center">
                                 <div class="terms">
                                     @RegisterResources.IAgree&nbsp;
-                                    <a class="tos" target="_blank" href="@Url.RouteUrl("TOS")">&nbsp;@RegisterResources.TermsOfServices</a>&nbsp;@RegisterResources.And&nbsp;<a target="_blank" href="@Url.RouteUrl("Privacy")">@RegisterResources.PrivacyPolicy</a>&nbsp;@RegisterResources.ofZbang
+                                    <a class="tos" target="_blank" href="@Url.RouteUrl("TOS")">@RegisterResources.TermsOfServices</a>&nbsp;@RegisterResources.And&nbsp;<a target="_blank" href="@Url.RouteUrl("Privacy")">@RegisterResources.PrivacyPolicy</a>&nbsp;@RegisterResources.ofZbang
                                 </div>
 
                                 <button type="submit" id="register-submit-btn" class="action-btn">
