--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -1,6 +1,6 @@
 ﻿@import "variables.less";
 
-/*.leaderboard {
+.leaderboard {
     width: 100%;
 
     h4 {
@@ -67,7 +67,7 @@
             color: @textColorBlack;
         }
     }
-}*/
+}
 
 
 .leaderboardbox {
@@ -91,7 +91,6 @@
     }
 
     .bg-r {
-        ;
         right: 0;
     }
 
